doc:Update swagger documentation
