# docs/swagger.yaml
@@ -9,6 +9,15 @@ definitions:
       developer_msg:
         type: string
     type: object
+  responses.ApiResponse:
+    properties:
+      code:
+        type: string
+      description:
+        type: string
+      developer_msg:
+        type: string
+    type: object
   segment.ActiveSegments:
     properties:
       ID:
@@ -16,17 +25,20 @@ definitions:
       name:
         type: string
     type: object
-  segment.ReportDateDTO:
+  segment.ToCreateSegmentDTO:
     properties:
-      month:
+      name:
         type: string
-      year:
+      percent:
+        type: integer
+    type: object
+  segment.ToDeleteSegmentDTO:
+    properties:
+      name:
         type: string
     type: object
-  segment.SegmentsUsers:
+  segment.ToUpdateUsersSegmentsDTO:
     properties:
-      ID:
-        type: string
       add:
         items:
           properties:
@@ -43,18 +55,6 @@ definitions:
       userID:
         type: string
     type: object
-  segment.ToCreateSegmentDTO:
-    properties:
-      name:
-        type: string
-      percent:
-        type: integer
-    type: object
-  segment.ToDeleteSegmentDTO:
-    properties:
-      name:
-        type: string
-    type: object
 host: 127.0.0.1:8080
 info:
   contact:
@@ -65,13 +65,11 @@ info:
   title: Avito Segment Service API
   version: "1.0"
 paths:
-  /api/original_reports/{userID}:
-    post:
-      consumes:
-      - application/json
+  /api/reports/download/{userID}:
+    get:
       description: |-
         Receiving CSV report with all user actions with segments by user ID, year and month.
-        Report v1 exist according to the terms of reference about CSV reports
+        Report v1 created by original requirements.
       operationId: get-report-v1
       parameters:
       - description: userID
@@ -79,20 +77,21 @@ paths:
         name: userID
         required: true
         type: integer
-      - description: Month and year as the beginning of the time period for the CSV
-          report
-        in: body
-        name: input
+      - description: Month as the beginning of the time period for the CSV report
+        in: query
+        name: month
         required: true
-        schema:
-          $ref: '#/definitions/segment.ReportDateDTO'
+        type: string
+      - description: Year as the beginning of the time period for the CSV report
+        in: query
+        name: year
+        required: true
+        type: string
       produces:
-      - application/json
+      - application/octet-stream
       responses:
         "200":
           description: OK
-          schema:
-            type: string
         "400":
           description: Bad Request
           schema:
@@ -112,10 +111,8 @@ paths:
       summary: Get user's report v1
       tags:
       - reports
-  /api/reports/{userID}:
-    post:
-      consumes:
-      - application/json
+  /api/reports/optimized/download/{userID}:
+    get:
       description: |-
         Receiving CSV report with all user actions with segments by user ID, year and month.
         Report v2 has better query and format to read.
@@ -126,20 +123,21 @@ paths:
         name: userID
         required: true
         type: integer
-      - description: Month and year as the beginning of the time period for the CSV
-          report
-        in: body
-        name: input
+      - description: Month as the beginning of the time period for the CSV report
+        in: query
+        name: month
         required: true
-        schema:
-          $ref: '#/definitions/segment.ReportDateDTO'
+        type: string
+      - description: Year as the beginning of the time period for the CSV report
+        in: query
+        name: year
+        required: true
+        type: string
       produces:
-      - application/json
+      - application/octet-stream
       responses:
         "200":
           description: OK
-          schema:
-            type: string
         "400":
           description: Bad Request
           schema:
@@ -175,8 +173,10 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ApiResponse'
         "400":
           description: Bad Request
           schema:
@@ -213,6 +213,8 @@ paths:
       responses:
         "201":
           description: Created
+          schema:
+            $ref: '#/definitions/responses.ApiResponse'
         "400":
           description: Bad Request
           schema:
@@ -235,20 +237,23 @@ paths:
     put:
       consumes:
       - application/json
-      description: Adds and removes tags to the user
+      description: Adds already created segments to users and removes segments from
+        the user
       operationId: edit-segment
       parameters:
-      - description: User's segment info
+      - description: segment to add/delete info
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/segment.SegmentsUsers'
+          $ref: '#/definitions/segment.ToUpdateUsersSegmentsDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.ApiResponse'
         "400":
           description: Bad Request
           schema:
@@ -270,8 +275,6 @@ paths:
       - segments
   /api/segments/{userID}:
     get:
-      consumes:
-      - application/json
       description: Get all active user's segments by userID
       operationId: get-active-segments
       parameters:
